tests/invalid_nodepend/invalid_decimal_literal.err_exp
invalid_decimal_literal.m:012: Error: no clauses for function `foo1'/0.
invalid_decimal_literal.m:013: Error: no clauses for function `foo2'/0.
invalid_decimal_literal.m:017: Syntax error: unterminated decimal literal.
invalid_decimal_literal.m:019: Syntax error: unterminated decimal literal.
